--- a/README.html
+++ b/README.html
@@ -52,3 +52,10 @@ L>
 		</script>
 	</body>
 </html>
+
+
+Ответы на вопросы
+1. 
+2. Возможности интерфейсных событий я бы могла использовать при создании сайта с детскими играми (например, перетаскивание разных цветов или картинок к) или при создании теста с несколькими вариантами ответа, где ответ так же можно было переносить.
+3. http://www.jeanhelfenstein.com/ 
+Идея дизайнера заключалась в том, чтобы создать портфолио, следуя современным тенденциям — оно должно было быть минималистичным, и при этом привносить что-то свежее в дизайн сайтов. Поэтому он решил использовать управление анимацией с помощью движений мыши и перетаскивания, а не нажатий клавиш навигации.
