--- a/README.html
+++ b/README.html
@@ -55,7 +55,8 @@ L>
 
 
 Ответы на вопросы
-1. 
+1. Интерфейсные события - это те события, с помощью которых мы можем контролировать действия пользователя на сайте. Начнём с движения мышкой, например пользователь хочет войти на сайте в меню "контакты", но случайно нажал на "каталог", для того, чтобы ему не возвращаться можно создать событие по двойному нажатию мышкой по точно выбранному меню. Так же с помощью событий мы можем предупреждать пользователя о том
+что нельзя делать на нашем сайте, например :копировать информацию. Так же если пользователь резко двигает мышь, специально чтобы пропустить ячейки, события на промежуточных элементах появляться не будут. Это ускорит поиск информации. Событие прокрутка позволяет перемещать визуальную части окна вверх, вниз, вправо и влево для того чтобы увидеть дополнительную информацию в окне. 
 2. Возможности интерфейсных событий я бы могла использовать при создании сайта с детскими играми (например, перетаскивание разных цветов или картинок к) или при создании теста с несколькими вариантами ответа, где ответ так же можно было переносить.
 3. http://www.jeanhelfenstein.com/ 
 Идея дизайнера заключалась в том, чтобы создать портфолио, следуя современным тенденциям — оно должно было быть минималистичным, и при этом привносить что-то свежее в дизайн сайтов. Поэтому он решил использовать управление анимацией с помощью движений мыши и перетаскивания, а не нажатий клавиш навигации.
